removed issue on reset.css that created a small gap below footer & improved responsive for landing page

--- a/css/reset.css
+++ b/css/reset.css
@@ -25,9 +25,6 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
     font-family: 'Fredoka', sans-serif;
 }
-body {
-	line-height: 1;
-}
 ol, ul {
 	list-style: none;
 }
